force-app/main/default/objects/leaseworks__Aircraft__c/leaseworks__Aircraft__c.object-meta.xml
<CustomObject>
    <customHelpPage>leaseworks__DeskComHelpPageAircraft</customHelpPage>
    <label>Asset</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>