force-app/main/default/objects/leaseworks__Aircraft__c/fields/Asset_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Asset_Manufacturer__c</fullName>
    <description>Replaces the free text field with a picklist.</description>
    <inlineHelpText>New field that works with Mfr-Asset Type dependencies. A Sysadmin can add new options.</inlineHelpText>
    <label>Asset Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airbus</fullName>
            </value>
            <value>
                <fullName>Boeing</fullName>
            </value>
            <value>
                <fullName>Bombardier</fullName>
            </value>
            <value>
                <fullName>Embraer</fullName>
            </value>
            <value>
                <fullName>McDonnell Douglas</fullName>
            </value>
            <value>
                <fullName>CFM</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>IAE</fullName>
            </value>
            <value>
                <fullName>Pratt &amp; Whitney</fullName>
            </value>
            <value>
                <fullName>Rolls Royce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>