force-app/main/default/objects/leaseworks__Aircraft__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <formula>If( Text(leaseworks__Status__c )=&#39;Pending&#39;,&quot;On Order&quot;,if(Text(leaseworks__Status__c)=&#39;AOG&#39;,&quot;AOG&quot;,if(Text(leaseworks__Status__c)=&#39;Available&#39;,&quot;-&quot;,If(Text(leaseworks__Status__c)= &#39;Assigned&#39;, 
Text(YEAR( leaseworks__Y_Hidden_Lease_End_Date__c ))&amp; &quot;-&quot; &amp; Text(MONTH(leaseworks__Y_Hidden_Lease_End_Date__c)),&quot;-&quot;))))</formula>
    <label>Availability</label>
    <type>Text</type>
</CustomField>