force-app/main/default/objects/leaseworks__Aircraft__c/fields/CAP_Prior_Year_Flight_Hours__c.field-meta.xml
<CustomField>
    <fullName>CAP_Prior_Year_Flight_Hours__c</fullName>
    <inlineHelpText>Sum of prior calendar year flight hours</inlineHelpText>
    <label>Prior Year Flight Hours</label>
    <summarizedField>leaseworks__Utilization_Report__c.leaseworks__Airframe_Flight_Hours_Month__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Utilization_Report__c.CAP_Is_Prior_Calendar_Year__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Utilization_Report__c.leaseworks__Aircraft__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>