force-app/main/default/objects/leaseworks__Aircraft__c/fields/EEL_1_URL_local__c.field-meta.xml
<CustomField>
    <fullName>EEL_1_URL_local__c</fullName>
    <label>EEL 1 URL</label>
    <type>Url</type>
</CustomField>