force-app/main/default/objects/leaseworks__Aircraft__c/fields/ESNs__c.field-meta.xml
<CustomField>
    <fullName>ESNs__c</fullName>
    <description>Comma-separated list of attached ESNs updated by flow.</description>
    <label>ESNs</label>
    <length>100</length>
    <type>Text</type>
</CustomField>