force-app/main/default/objects/leaseworks__Aircraft__c/fields/Exchange_in_lieu_of_Mtx__c.field-meta.xml
<CustomField>
    <fullName>Exchange_in_lieu_of_Mtx__c</fullName>
    <description>Added at customer request https://app.asana.com/0/1205685966385992/1206895472241492/f</description>
    <inlineHelpText>Select one or more components that can be exchanged in lieu of a maintenance event</inlineHelpText>
    <label>Exchange in lieu of Mtx</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engine 1</fullName>
            </value>
            <value>
                <fullName>Engine 2</fullName>
            </value>
            <value>
                <fullName>Engine 3</fullName>
            </value>
            <value>
                <fullName>Engine 4</fullName>
            </value>
            <value>
                <fullName>APU</fullName>
            </value>
            <value>
                <fullName>LG Nose</fullName>
            </value>
            <value>
                <fullName>LG Right Main</fullName>
            </value>
            <value>
                <fullName>LG Left Main</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>