force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Aircraft_Business_PAX_Cargo__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_Business_PAX_Cargo__c</fullName>
    <label>Aircraft Business (PAX/Cargo)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cargo</fullName>
            </value>
            <value>
                <fullName>Passenger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>