force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Aircraft_Image__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_Image__c</fullName>
    <formula>IF( leaseworks__Aircarft_Image_URL__c !=null, IMAGE( leaseworks__Aircarft_Image_URL__c , &#39;Image Unavailable&#39;), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Image</label>
    <type>Text</type>
</CustomField>