force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Airfleets_Info__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Airfleets_Info__c</fullName>
    <description>Airfleets informs you about aircraft movements between different Operators</description>
    <formula>if(!ISBLANK(leaseworks__Registration_Number__c),HYPERLINK(&quot;https://www.airfleets.net/recherche/?key=&quot;&amp; leaseworks__Registration_Number__c ,&quot;https://www.airfleets.net/recherche/?key=&quot;&amp; leaseworks__Registration_Number__c, &quot;_blank&quot;),
&quot;No Record Found&quot;)</formula>
    <inlineHelpText>Airfleets informs you about aircraft movements between different Operators</inlineHelpText>
    <label>Airfleets Info</label>
    <type>Text</type>
</CustomField>