force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Asset_Family__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_Family__c</fullName>
    <label>Asset Family</label>
    <length>100</length>
    <type>Text</type>
</CustomField>