force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Asset_Owner_new__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_Owner_new__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of the Asset</description>
    <inlineHelpText>Owner of the Asset</inlineHelpText>
    <label>Asset Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Asset Owner)</relationshipLabel>
    <relationshipName>Asset</relationshipName>
    <type>Lookup</type>
</CustomField>