force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Asset_Risk_Assessment_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_Risk_Assessment_Completed_By__c</fullName>
    <description>User who completed or last edited the Asset Risk Assessment</description>
    <inlineHelpText>User who completed or last edited the Asset Risk Assessment</inlineHelpText>
    <label>Asset Risk Assessment Completed By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>