force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Asset_Risk_Assessment_Score__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_Risk_Assessment_Score__c</fullName>
    <label>Asset Risk Assessment Score</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>