force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Asset_Status_External__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_Status_External__c</fullName>
    <label>_Asset Status External</label>
    <length>50</length>
    <type>Text</type>
</CustomField>