force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Asset_Type_Score__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset_Type_Score__c</fullName>
    <label>Asset Type Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>