force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Assigned_To_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assigned_To_F__c</fullName>
    <formula>leaseworks__Lease__r.leaseworks__Operator_New__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To</label>
    <type>Text</type>
</CustomField>