force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Authority_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Authority_of_Registration__c</fullName>
    <inlineHelpText>Authority which oversights the airworthiness of the asset (US - FAA, Canada - TCCA, etc)</inlineHelpText>
    <label>Airworthiness Authority</label>
    <length>80</length>
    <type>Text</type>
</CustomField>