force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Awarded_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Awarded_Date__c</fullName>
    <label>Awarded Date</label>
    <type>Date</type>
</CustomField>