force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Base_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Base_Market_Value__c</fullName>
    <label>Base Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>