force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Base_Purchase_Price_mm__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Base_Purchase_Price_mm__c</fullName>
    <label>Base Purchase Price ($m)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>