force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Book_Value__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Book_Value__c</fullName>
    <label>Starting Book Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>