force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Cash_Maintenance_Reserve_Engine_2_LLP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cash_Maintenance_Reserve_Engine_2_LLP__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Z_Unused CMR Engine 2 LLP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>