force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__CMV__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CMV__c</fullName>
    <label>Current Market Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>