force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Comments_Technical__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comments_Technical__c</fullName>
    <label>Comments (Technical)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>