force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Cost_per_FC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cost_per_FC__c</fullName>
    <formula>leaseworks__Purchase_Price__c / leaseworks__CSN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost per FC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>