force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Cost_to_Half_Life_Heavy_2__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cost_to_Half_Life_Heavy_2__c</fullName>
    <description>Renamed to Heavy 2 HL MVA to match Valuation terminology</description>
    <label>Z_Unused Heavy 2 HL MVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>