force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__CSN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSN__c</fullName>
    <description>Cycles since new - # of take offs and landing since the ac was new</description>
    <inlineHelpText>Cycles since new - # of take offs and landing since the ac was new</inlineHelpText>
    <label>CSN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>