force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Current_Lessee__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Lessee__c</fullName>
    <formula>leaseworks__Lease__r.leaseworks__Lessee_New__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Lessee</label>
    <type>Text</type>
</CustomField>