force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Date_of_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_of_Manufacture__c</fullName>
    <label>Date of Manufacture</label>
    <type>Date</type>
</CustomField>