force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Derate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Derate__c</fullName>
    <inlineHelpText>The Derate Percentage that will be considered for each engine unless it is overridden on the Assembly level.</inlineHelpText>
    <label>Engine Derate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>