force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Engine_Variant__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Variant__c</fullName>
    <description>To copy over the engine variant from the assembly page using PB</description>
    <label>Z_Unused_202308_Engine Variant</label>
    <length>80</length>
    <type>Text</type>
</CustomField>