force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Event_Phase__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Phase__c</fullName>
    <label>Z_Unused Event Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Run</fullName>
            </value>
            <value>
                <fullName>Mature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>