force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Facility_Structure__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Facility_Structure__c</fullName>
    <label>Facility Structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACG Singapore Pte Ltd</fullName>
            </value>
            <value>
                <fullName>TRUST II</fullName>
            </value>
            <value>
                <fullName>ACG Corp</fullName>
            </value>
            <value>
                <fullName>TRUST I</fullName>
            </value>
            <value>
                <fullName>TRUST III</fullName>
            </value>
            <value>
                <fullName>ACG Cap Partners</fullName>
            </value>
            <value>
                <fullName>ECA</fullName>
            </value>
            <value>
                <fullName>EXIM</fullName>
            </value>
            <value>
                <fullName>CIAF</fullName>
            </value>
            <value>
                <fullName>HSH 2004-1</fullName>
            </value>
            <value>
                <fullName>ACGFT 2009-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>