force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__FH_FC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__FH_FC__c</fullName>
    <formula>IF(leaseworks__CSN__c &gt;0,leaseworks__TSN__c  /  leaseworks__CSN__c , null)</formula>
    <inlineHelpText>FH/FC ratio calculated as TSN/CSN</inlineHelpText>
    <label>FH:FC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>