force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__FH_FC_Ratio_per_Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__FH_FC_Ratio_per_Lease__c</fullName>
    <formula>0</formula>
    <inlineHelpText>FH:FC ratio as specified in the lease, associated with this aircraft</inlineHelpText>
    <label>Z_Unused_2406_FH:FC Ratio (per Lease)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>