force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__First_Class_Quantity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__First_Class_Quantity__c</fullName>
    <label>Z_Unused_2006 First Class Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>