force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Generate_Aircraft_Sale_Journals__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Generate_Aircraft_Sale_Journals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to generate journal entries for aircraft sale.</description>
    <inlineHelpText>Check this to generate journal entries for aircraft sale.</inlineHelpText>
    <label>Generate Aircraft Sale Journals</label>
    <type>Checkbox</type>
</CustomField>