force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__ISNEWAC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ISNEWAC__c</fullName>
    <defaultValue>&quot;T&quot;</defaultValue>
    <label>ISNEWAC</label>
    <length>1</length>
    <type>Text</type>
</CustomField>