force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Last_C_Check__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_C_Check__c</fullName>
    <label>Z_Unused Last C-Check</label>
    <type>Date</type>
</CustomField>