force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Last_C_Check_Date2__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_C_Check_Date2__c</fullName>
    <description>Date on which Last C-Check was done.</description>
    <label>Z_Unused Last C-Check Date2</label>
    <summarizedField>leaseworks__Aircraft_Eligible_Event__c.leaseworks__End_Date__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Aircraft_Eligible_Event__c.leaseworks__Event_Type__c</field>
        <operation>equals</operation>
        <value>C-Check</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>leaseworks__Aircraft_Eligible_Event__c.leaseworks__End_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/1900</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Aircraft_Eligible_Event__c.leaseworks__Aircraft__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>