force-app/main/default/objects/leaseworks__Aircraft__c/fields/leaseworks__Last_CSN_Utilization__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_CSN_Utilization__c</fullName>
    <label>Last CSN (Utilization)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>